force-app/main/default/main/default/objects/Patient_Report_Card__c/Patient_Report_Card__c.object-meta.xml
<CustomObject>
    <label>Patient Report Card</label>
    <nameField>
        <label>Patient Report Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Report Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>