force-app/main/default/main/default/objects/Patient_Report_Card__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergist</fullName>
            </value>
            <value>
                <fullName>Anaesthesiologist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Gastroenterologist</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Opthalmologist</fullName>
            </value>
            <value>
                <fullName>Sleep Disorder Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>