force-app/main/default/main/default/objects/Patient_Report_Card__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Patient Report Cards</relationshipLabel>
    <relationshipName>Patient_Report_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>