force-app/main/default/main/default/objects/Patient_Report_Card__c/fields/Patients_Behaviour_Description__c.field-meta.xml
<CustomField>
    <fullName>Patients_Behaviour_Description__c</fullName>
    <label>Patients Behaviour Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>