force-app/main/default/main/default/objects/Patient_Report_Card__c/fields/Test_to_be_Performed__c.field-meta.xml
<CustomField>
    <fullName>Test_to_be_Performed__c</fullName>
    <label>Test to be Performed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy Skin Testing</fullName>
            </value>
            <value>
                <fullName>Blood Testing</fullName>
            </value>
            <value>
                <fullName>Spirometry</fullName>
            </value>
            <value>
                <fullName>ECG</fullName>
            </value>
            <value>
                <fullName>Chest X-Ray</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Computerized Tomography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>